--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "backend server for creative agency web application",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "devstart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jobayer H",
